# platform.core.appfw.message-port

./: CMakeLists.txt  capi-message-port.pc.in  message-port.pc.in  project.config
doc/: message-port-doc.h
include/: message-port-data-types.h  message-port-messages.h  message-port-param-traits.h  message-port.h  message_port.h  message_port_error.h  message_port_internal.h
packaging/: message-port.changes  message-port.spec
src/: CMakeLists.txt  IIpcClientEventListener.h  IpcClient.cpp  IpcClient.h  MessagePortProxy.cpp  MessagePortProxy.h  message-port-log.h  message-port-messages.cpp  message-port.c  message-port.cpp  message_port.c  message_port_internal.c
src/inc/: message-port-log.h  message_port_log.h
